--- a/_sass/addon/commons.scss
+++ b/_sass/addon/commons.scss
@@ -688,6 +688,7 @@ $btn-mb: 0.5rem;
   height: 100%;
   overflow-y: auto;
   width: $sidebar-width;
+  /* background: rgb(204,229,255); */
   background: var(--sidebar-bg);
   border-right: 1px solid var(--sidebar-border-color);
 
